--- a/app/src/main/res/layout/iservicefragment.xml
+++ b/app/src/main/res/layout/iservicefragment.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -43,15 +42,14 @@
                     android:background="@drawable/bg_me"
                     android:scaleType="fitXY" />
 
-                <com.bhq.widget.CircleImageView
+                <ImageView
                     android:id="@+id/circle_img"
-                    android:layout_width="70dip"
-                    android:layout_height="70dip"
+                    android:layout_width="80dip"
+                    android:layout_height="80dip"
+                    android:scaleType="fitXY"
                     android:layout_gravity="bottom|center_horizontal"
                     android:layout_marginBottom="40dip"
-                    android:src="@drawable/noimg"
-                    app:border_color="#00000000"
-                    app:border_width="0dp" />
+               />
 
                 <LinearLayout
                     android:id="@+id/ll_edituser"
