--- a/app/src/main/res/layout/message_item_layout.xml
+++ b/app/src/main/res/layout/message_item_layout.xml
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dip"
-                android:text="发布于"
+                android:text="发布"
                 android:textColor="@color/red"
                 android:textSize="@dimen/text_size_10" />
 
@@ -160,6 +160,7 @@
                 android:background="@null"
                 android:gravity="center"
                 android:text="未完成"
+                android:visibility="gone"
                 android:textColor="@color/red"
                 android:textSize="11sp" />
         </LinearLayout>
