1修复任务模块z中完成状态的bug

--- a/app/src/main/res/layout/taskcontent.xml
+++ b/app/src/main/res/layout/taskcontent.xml
@@ -331,6 +331,7 @@
         android:id="@+id/ll_CYR"
         android:layout_width="match_parent"
         android:layout_height="60dip"
+        android:visibility="gone"
         android:orientation="horizontal" >
 
         <Button
