--- a/app/src/main/res/layout/discoveryactivity.xml
+++ b/app/src/main/res/layout/discoveryactivity.xml
@@ -25,9 +25,10 @@
         android:layout_height="0.1px"
         android:background="@color/black" />
 
-    <com.bhq.widget.PullToRefreshListView
-        android:id="@+id/frame_listview_news"
-        style="@style/widget_listview"
-        android:background="@color/white" />
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
