--- a/app/src/main/res/layout/patrolcontrolfragment.xml
+++ b/app/src/main/res/layout/patrolcontrolfragment.xml
@@ -133,7 +133,19 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/btn_map_textsize"/>
         </RelativeLayout>
-
+        <TextView
+            android:id="@+id/tv_yx"
+            android:layout_width="60dip"
+            android:layout_height="35dip"
+            android:layout_marginBottom="30dip"
+            android:layout_marginRight="10dip"
+            android:alpha="1"
+            android:layout_gravity="bottom|right"
+            android:background="@drawable/background_view_rounded_single"
+            android:gravity="center"
+            android:text="影像"
+            android:textColor="@color/red"
+            android:textSize="@dimen/btn_map_textsize"/>
         <LinearLayout
             android:id="@+id/ll_GPS"
             android:layout_width="wrap_content"
