--- a/app/src/main/res/layout/guanyu.xml
+++ b/app/src/main/res/layout/guanyu.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/titlebar_height"
-        android:background="@color/bg_titlebar" >
+        android:background="@color/bg_titlebar">
 
         <ImageButton
             android:id="@+id/btn_back"
@@ -16,7 +17,7 @@
             android:layout_marginLeft="5dip"
             android:background="@null"
             android:contentDescription=""
-            android:src="@drawable/back" />
+            android:src="@drawable/back"/>
 
         <TextView
             android:id="@+id/tv_title"
@@ -26,18 +27,35 @@
             android:gravity="center"
             android:text="关于"
             android:textColor="@color/bg_text"
-            android:textSize="@dimen/titlebar_textsize" />
+            android:textSize="@dimen/titlebar_textsize"/>
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/black" />
+        android:layout_below="@+id/rl_top"
+        android:background="@color/black"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="180dip"
-        android:gravity="center"
-        android:hint="版本号：1.0 \n\n @copyright：北京盈创星空 \n\n合作方：广东石门台自然保护区" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_version"
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:gravity="center"
+            android:hint="版本号：未知"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="开发团队@copyright：北京盈创星空 \n\n合作方：广东石门台自然保护区"/>
+
+
+    </LinearLayout>
+
+</RelativeLayout>
