--- a/app/src/main/res/layout/message_item_layout.xml
+++ b/app/src/main/res/layout/message_item_layout.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dip"
-    android:layout_marginTop="25dip"
-    android:background="@color/transparent"
-    android:orientation="horizontal" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="10dip"
+              android:layout_marginTop="25dip"
+              android:background="@color/transparent"
+              android:orientation="horizontal">
 
     <RelativeLayout
         android:layout_width="40dip"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/news_listitem_date"
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:text="11-23"
             android:textColor="@color/red"
-            android:textSize="11sp" />
+            android:textSize="11sp"/>
     </RelativeLayout>
 
     <com.swipelistview.RotateYView
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dip"
-        android:layout_marginTop="50dip" >
+        android:layout_marginTop="50dip">
 
         <ImageView
             android:id="@+id/message_icon"
@@ -36,7 +36,7 @@
             android:layout_height="10dip"
             android:scaleType="center"
             android:src="@drawable/point_round"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"/>
     </com.swipelistview.RotateYView>
 
     <LinearLayout
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="20dp"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,13 +53,13 @@
             android:layout_marginTop="5dip"
             android:gravity="center"
             android:minHeight="40dip"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="15dip"
                 android:layout_height="15dip"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/menu_workreport" />
+                android:src="@drawable/menu_workreport"/>
 
             <TextView
                 android:id="@+id/message_title"
@@ -68,7 +68,7 @@
                 android:layout_marginLeft="10dip"
                 android:text="暂无任务内容"
                 android:textColor="@color/black"
-                android:textSize="15sp" />
+                android:textSize="15sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginTop="8dip"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="开始"
                 android:textColor="@color/red"
-                android:textSize="@dimen/text_size_10" />
+                android:textSize="@dimen/text_size_10"/>
 
             <TextView
                 android:id="@+id/message_time"
@@ -94,7 +94,7 @@
                 android:layout_marginLeft="15dip"
                 android:text="11-24"
                 android:textColor="@color/bg_text"
-                android:textSize="@dimen/text_size_10" />
+                android:textSize="@dimen/text_size_10"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -103,7 +103,7 @@
                 android:layout_marginLeft="15dip"
                 android:text="截止"
                 android:textColor="@color/red"
-                android:textSize="@dimen/text_size_10" />
+                android:textSize="@dimen/text_size_10"/>
 
             <TextView
                 android:id="@+id/message_day"
@@ -113,7 +113,7 @@
                 android:layout_marginLeft="15dip"
                 android:text="2015-08-09"
                 android:textColor="@color/bg_text"
-                android:textSize="@dimen/text_size_10" />
+                android:textSize="@dimen/text_size_10"/>
 
             <TextView
                 android:id="@+id/tv_status"
@@ -123,33 +123,39 @@
                 android:layout_marginLeft="15dip"
                 android:text="距离2天"
                 android:textColor="@color/red"
-                android:textSize="@dimen/text_size_10" />
+                android:textSize="@dimen/text_size_10"/>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:layout_marginTop="8dip"
-            android:orientation="horizontal" >
+            android:layout_marginTop="8dip">
 
             <TextView
                 android:id="@+id/news_listitem_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:text="李四"
                 android:textColor="@color/listitem_gray"
-                android:textSize="@dimen/text_size_10" />
+                android:textSize="@dimen/text_size_10"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dip"
+                android:layout_toRightOf="@+id/news_listitem_author"
                 android:text="发布"
+                android:layout_marginLeft="10dip"
                 android:textColor="@color/red"
-                android:textSize="@dimen/text_size_10" />
+                android:textSize="@dimen/text_size_10"/>
+
+            <View
+                android:id="@+id/view_newmessage"
+                android:layout_width="40dip"
+                android:layout_height="15dip"
+                android:layout_alignParentRight="true"
+               android:background="@drawable/new_icon"/>
 
             <Button
                 android:id="@+id/btn_SFWC"
@@ -160,10 +166,10 @@
                 android:background="@null"
                 android:gravity="center"
                 android:text="未完成"
-                android:visibility="gone"
                 android:textColor="@color/red"
-                android:textSize="11sp" />
-        </LinearLayout>
+                android:textSize="11sp"
+                android:visibility="gone"/>
+        </RelativeLayout>
 
         <View
             android:id="@+id/main_line"
@@ -171,7 +177,7 @@
             android:layout_height="1px"
             android:layout_gravity="bottom"
             android:layout_marginTop="15dip"
-            android:background="#C7C7C7" />
+            android:background="#C7C7C7"/>
     </LinearLayout>
 
 </LinearLayout>
